# WEB_module2

./: Dockerfile  README.md  contacts.pkl  docker-compose.yaml  pyproject.toml
remind_me/: README.md  address_book_part.py  cleaner.py  fields_part.py  main.py  record_part.py
